@@ -32,7 +32,7 @@
   b4c60a4702749a0369b5059e7c1f50ce567e2c95 2012073100 mingw32-bzip2.xml
   c2fa4fe580615c774f72216fb06e35a909a08ba6 2012040200 mingw32-cygutils.xml
   c320ae7f1db93419e4a9b9ad098f69bb6655af08 2013012700 mingw32-dos2unix.xml
-  a14614e416d2a0aa7d4d0bbc1b30ab85e73d704b 2013090300 mingw32-expat.xml
+  4dab2d86ca2203a8ac0233824c687504fda4601e 2013091000 mingw32-expat.xml
   bc4b331f9bdfbf72a11a310fbc17a027396d09d5 2012073100 mingw32-gcc-tools.xml
   9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
   aa57cd5a0e02d039f82522d68476f948a64115d7 2013090802 mingw32-gcc4.xml
@@ -50,7 +50,7 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   db18b5bc0eea58053df8775b1c0522e12751c128 2013090900 mingw32-mpc.xml
   e3b21976e887e91c159816ae10468bba2950cc6a 2013090900 mingw32-mpfr.xml
-  983af8ad24a6f97da867784dfeeecc6661d54d88 2013090901 mingw32-package-list.xml
+  983af8ad24a6f97da867784dfeeecc6661d54d88 2013091000 mingw32-package-list.xml
   bad22da9b9ec9bcea1d539e29ee2976cc88d9fc2 2013053000 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   0a5d210a13d073104fb74b4f9c081674c9745cd1 2013090900 mingw32-pthreads-w32.xml
