@@ -24,23 +24,10 @@
 
       <component class="bin">
 	<release tarname="expat-2.1.0-1-mingw32-bin.tar.lzma" >
-	  <requires eq="expat-%-mingw32-dll.tar.lzma" />
+	  <requires eq="mingw32-libexpat-%-mingw32-%-dll-1.tar" />
 	</release>
         <release tarname="expat-2.0.1-1-mingw32-bin.tar.gz" >
 	  <requires eq="mingw32-libexpat-%-mingw32-%-dll-1.tar" />
-	</release>
-      </component>
-
-      <component class="dll">
-	<release tarname="expat-2.1.0-1-mingw32-dll.tar.lzma" >
-	  <requires eq="libexpat-%-mingw32-dll-0.tar" />
-	</release>
-      </component>
-
-      <component class="dev">
-	<release tarname="expat-2.1.0-1-mingw32-dev.tar.lzma" >
-	  <requires eq="expat-%-mingw32-dll.tar.lzma" />
-	  <requires eq="libexpat-%-mingw32-dev.tar" />
 	</release>
       </component>
 
@@ -78,22 +65,26 @@
 	primary package.
 	</paragraph>
       </description>
+
+      <licence tarname="expat-%-mingw32-%-lic.tar.%" />
+      <source tarname="expat-%-mingw32-%-src.tar.%" />
+
       <component class="dll">
-        <release tarname="libexpat-2.0.1-1-mingw32-dll-1.tar.gz" />
-	<release tarname="libexpat-2.1.0-1-mingw32-dll-0.tar" >
-	  <download tarname="none"/>
+	<release tarname="libexpat-2.1.0-1-mingw32-dll-1.tar" >
+	  <download tarname="expat-2.1.0-1-mingw32-dll.tar.lzma" />
 	</release>
+        <release tarname="libexpat-2.0.1-1-mingw32-dll-1.tar.gz" />
       </component>
+
       <component class="dev">
+	<release tarname="libexpat-2.1.0-1-mingw32-dev.tar" >
+	  <download tarname="expat-2.1.0-1-mingw32-dev.tar.lzma" />
+	  <requires eq="mingw32-libexpat-%-mingw32-%-dll-1.tar" />
+	</release>
         <release tarname="libexpat-2.0.1-1-mingw32-dev.tar.gz" >
 	  <requires eq="mingw32-libexpat-%-mingw32-%-dll-1.tar" />
 	</release>
-	<release tarname="libexpat-2.1.0-1-mingw32-dev-0.tar" >
-	  <download tarname="none"/>
-	</release>
       </component>
-      <licence tarname="expat-%-mingw32-%-lic.tar.%" />
-      <source tarname="expat-%-mingw32-%-src.tar.%" />
     </package>
   </package-collection>
 </software-distribution>
